force-app/main/default/objects/TIS_Detail__c/TIS_Detail__c.object-meta.xml
<CustomObject>
    <label>TIS Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIS Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>