force-app/main/default/objects/TIS_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TIS Detail</relationshipLabel>
    <relationshipName>TIS_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>