force-app/main/default/objects/TIS_Detail__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT( Days__c )&amp;&quot; days &quot;&amp;TEXT(  Hrs__c )&amp;&quot; hours &quot;&amp;TEXT(Mins__c)&amp;&quot; mins&quot;</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>