force-app/main/default/objects/TIS_Detail__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>ROUND
                       ( 24 * 
                           ( 
                               (Date_Time_Out__c- Date_Time_In__c ) 
                                - FLOOR(Date_Time_Out__c-Date_Time_In__c ) 
                             ) 
                       ,8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>