force-app/main/default/objects/TIS_Detail__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <formula>IF(State__c = &quot;Closed&quot;, 0, if( ISNULL(Date_Time_Out__c),((FLOOR( NOW() - Date_Time_In__c )) * 24) + FLOOR( 24 * ( (NOW() - Date_Time_In__c ) - FLOOR(NOW() - Date_Time_In__c ) )), ((FLOOR(Date_Time_Out__c - Date_Time_In__c )) * 24) + FLOOR( 24 * ( (Date_Time_Out__c - Date_Time_In__c ) - FLOOR(Date_Time_Out__c - Date_Time_In__c ) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>