force-app/main/default/objects/TIS_Detail__c/fields/Hrs__c.field-meta.xml
<CustomField>
    <fullName>Hrs__c</fullName>
    <formula>IF(State__c = &quot;Closed&quot;, 
0, 
if( ISNULL(Date_Time_Out__c), 
FLOOR( 
24 * ( 
(NOW() - Date_Time_In__c ) 
- 
FLOOR(NOW() - Date_Time_In__c ) )), 
FLOOR( 24 * ( 
(Date_Time_Out__c - Date_Time_In__c ) 
- 
FLOOR(Date_Time_Out__c - Date_Time_In__c ) 
) 
) 
) 
)</formula>
    <label>Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>