force-app/main/default/objects/TIS_Detail__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <formula>IF(State__c = &quot;Closed&quot;, 0,IF( ISNULL(Date_Time_Out__c ),(NOW() - Date_Time_In__c ) ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>