force-app/main/default/objects/TIS_Detail__c/fields/Mins__c.field-meta.xml
<CustomField>
    <fullName>Mins__c</fullName>
    <formula>IF(State__c = &quot;Closed&quot;, 0,IF( ISNULL(Date_Time_Out__c ),(ROUND(60 * (ROUND( 24 * ( (NOW() - Date_Time_In__c ) - FLOOR(NOW() - Date_Time_In__c ) ),8) - FLOOR(ROUND( 24 * ( (NOW() - Date_Time_In__c ) - FLOOR(NOW() - Date_Time_In__c ) ),8)) ),0) ), (ROUND(60 * (ROUND( 24 * ( (Date_Time_Out__c - Date_Time_In__c ) - FLOOR(Date_Time_Out__c - Date_Time_In__c ) ),8) - FLOOR(ROUND( 24 * ( (Date_Time_Out__c - Date_Time_In__c ) - FLOOR(Date_Time_Out__c - Date_Time_In__c ) ),8)) ),0) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>